---
source: crates/decorous-frontend/src/parser.rs
expression: tree
---
DecorousAst {
    nodes: [
        Node {
            loc: Location {
                start: 59,
                end: 70,
            },
            node_type: Element(
                Element {
                    tag: "p",
                    attrs: [],
                    children: [
                        Node {
                            loc: Location {
                                start: 62,
                                end: 66,
                            },
                            node_type: Text(
                                "hello",
                            ),
                        },
                    ],
                },
            ),
        },
    ],
    script: Some(
        SCRIPT@0..6
          EXPR_STMT@0..6
            ASSIGN_EXPR@0..5
              NAME_REF@0..1
                IDENT@0..1 "x"
              WHITESPACE@1..2 " "
              EQ@2..3 "="
              WHITESPACE@3..4 " "
              LITERAL@4..5
                NUMBER@4..5 "3"
            SEMICOLON@5..6 ";"
        ,
    ),
    css: Some(
        "hello { color: red; }",
    ),
}
